// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center mb-8"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r2:"
          aria-selected="true"
          class="tab-option tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r0:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Plant
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r4:"
          aria-selected="false"
          class="tab-option"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r1:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Group
        </button>
      </div>
      <div
        class="my-4 md:my-8"
      >
        <div
          aria-labelledby="headlessui-tabs-tab-:r0:"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-:r2:"
          role="tabpanel"
          tabindex="0"
        >
          <form
            class="flex flex-col gap-4"
            id="plantDetails"
          >
            <label
              class="relative"
            >
              <span>
                Plant name
              </span>
              <input
                class="input w-full"
                name="name"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Plant species
              </span>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                autocomplete="off"
                class="input w-full"
                data-headlessui-state=""
                id="headlessui-combobox-input-:r3:"
                name="species"
                pattern=".{0,50}"
                role="combobox"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label>
              <span>
                Pot size
              </span>
              <input
                class="input w-full"
                inputmode="numeric"
                name="pot_size"
                type="text"
                value=""
              />
            </label>
            <label
              class="relative"
            >
              <span>
                Description
              </span>
              <textarea
                class="textarea w-full"
                name="description"
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
          </form>
        </div>
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r1:"
          id="headlessui-tabs-panel-:r4:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
      <button
        class="btn btn-accent mx-auto"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when plant division in progress 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center mb-8"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4"
    >
      <div
        class="flex flex-col full-screen justify-center text-center gap-8 px-4"
      >
        <p
          class="text-lg font-bold mt-auto mb-8"
        >
          Was this plant divided from 
          Test Plant
          ?
        </p>
        <div
          class="mx-auto p-4 bg-base-200 rounded-3xl"
        >
          <img
            alt="Test Plant image"
            class="max-h-[50vh] rounded-xl object-contain"
            draggable="false"
            src="/media/thumbnails/photo_thumb.webp"
          />
        </div>
        <div
          class="flex gap-4 mx-auto mt-8 mb-auto"
        >
          <button
            class="btn h-12 btn-error btn-square text-white"
            title="Plant was NOT divided"
          >
            <svg
              class="size-6"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
              />
            </svg>
          </button>
          <button
            class="btn h-12 btn-success btn-square text-white"
            title="Plant was divided"
          >
            <svg
              class="size-6"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
